--- a/src/HbysApi.WebApi/Config/appsettings.json
+++ b/src/HbysApi.WebApi/Config/appsettings.json
@@ -9,7 +9,29 @@
   "ConnectionStrings": {
     "DefaultConnection": "DATA SOURCE=your_server:1521/your_service;User ID=your_user;Password=your_password;PERSIST SECURITY INFO=True;"
   },
+  "Redis": {
+    "Host": "your_redis_host",
+    "Port": "your_redis_port",
+    "Password": "your_redis_password",
+    "CaPath": "Config/Certs/ca.crt",
+    "PfxPath": "Config/Certs/client.pfx",
+    "PfxPassword": "your_pfx_password"
+  },
   "Queries": {
     "PhoneBookQuery": "YourQueryHere"
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      { "Name": "File", "Args": { "path": "Logs/log-.txt", "rollingInterval": "Day" } }
+    ]
   }
 }
